<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#F44336"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="Equalization"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_eq_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioEqButtonClicked"
            android:text="@string/action_radio_eq_simple" />

        <RadioButton
            android:id="@+id/radio_eq_clache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioEqButtonClicked"
            android:text="@string/action_radio_eq_adaptive" />

        <RadioButton
            android:id="@+id/radio_eq_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioEqButtonClicked"
            android:text="Disable" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#DDE8EA"
            android:text="CLACHE Equalization"
            android:textAlignment="center"
            android:textSize="10pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Tiles size: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editXTileClache"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:max="255"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="X"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editYTileClache"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Limit: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editLimitClache"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"

            android:max="255"/>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_save" />

    </LinearLayout>





</LinearLayout>