<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#F44336"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_erosion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioMorphoButtonClicked"
            android:text="@string/action_live_erosion" />

        <RadioButton
            android:id="@+id/radio_dilatation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioMorphoButtonClicked"
            android:text="@string/action_live_dilatation" />

        <RadioButton
            android:id="@+id/radio_opening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioMorphoButtonClicked"
            android:text="@string/action_live_opening" />

        <RadioButton
            android:id="@+id/radio_closing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioMorphoButtonClicked"
            android:text="@string/action_live_closing" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#DDE8EA"
            android:text="Erosion"
            android:textAlignment="center"
            android:textSize="10pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Kernel: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelXErosion"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="X"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelYErosion"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#DDE8EA"
            android:text="Dilatation"
            android:textAlignment="center"
            android:textSize="10pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Kernel: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelXDilatation"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="X"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelYDilatation"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#DDE8EA"
            android:text="Opening"
            android:textAlignment="center"
            android:textSize="10pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Kernel: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelXOpening"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="X"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelYOpening"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#DDE8EA"
            android:text="Closing"
            android:textAlignment="center"
            android:textSize="10pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Kernel: "
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelXClosing"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="X"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editKernelYClosing"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="numberDecimal"
            android:max="255"/>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_save" />

    </LinearLayout>





</LinearLayout>